--- a/report/thesisfront.tex
+++ b/report/thesisfront.tex
@@ -41,13 +41,12 @@ Jury \lskip
 	
 
 
-\begin{tabular}{p{3cm}p{7cm}p{5cm} }
+\begin{tabular}{p{3cm}p{5cm}p{7cm} }
  % President: & Name & Position (Institution) \\ & & \\     % for final defense only (not bibliography)
- Evaluators: & Name & Position (Institution) \\
+ Evaluators: & Dr. Olivier Kermognant & Assistant Professor (LS2N, ECN) \\
 	      & Name & Position (Institution) \\ 
 	      & Name & Position (Institution) \\ & & \\  & & \\ 
-  Supervisor(s):  & Name & Position (Institution) \\
-		  & Name & Position (Institution) \\
+  Supervisor(s):  & Dr. Sophie Sakka & Assistant Professor (LS2N, ECN) \\
 % EMARO students only
 %(EMARO)  & Co-supervisor from M1 & Position, M1 institution 
 \end{tabular}
