--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -1,24 +1,91 @@
 % Encoding: UTF-8
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
-@article{pythm001,
-	author = "Pythagoras, Of Samos",
-	journal = "Some old journal",
-	month = feb,
-	number = "1",
-	title = "{Theorem}",
-	volume = "1",
-	year = "-580"
+%Book no. 0
+@incollection{FUKAYA2001273,
+  title     = {Design of a Humanoid Hand for Human Friendly Robotics Applications},
+  editor    = {Eiji Arai and Tatsuo Arai and Masaharu Takano},
+  booktitle = {Human Friendly Mechatronics},
+  publisher = {Elsevier Science},
+  address   = {Amsterdam},
+  pages     = {273 - 278},
+  year      = {2001},
+  isbn      = {978-0-444-50649-8},
+  doi       = {https://doi.org/10.1016/B978-044450649-8/50046-2},
+  url       = {http://www.sciencedirect.com/science/article/pii/B9780444506498500462},
+  author    = {Naoki Fukaya and Shigeki Toyama and Tamim Asfour and Rüdiger Dillmann}
 }
 
-@article{euclides300,
-	author = "Euclides, Of Alexandria",
-	journal = "Self-published",
-	month = feb,
-	number = "1",
-	title = "{Elements}",
-	volume = "1",
-	year = "-300"
+%Book no. 1
+@inbook{Kemp2008,
+  author    = {Kemp, Charles C.
+and Fitzpatrick, Paul
+and Hirukawa, Hirohisa
+and Yokoi, Kazuhito
+and Harada, Kensuke
+and Matsumoto, Yoshio},
+  editor    = {Siciliano, Bruno
+and Khatib, Oussama},
+  title     = {Humanoids},
+  booktitle = {Springer Handbook of Robotics},
+  year      = {2008},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {1307--1333},
+  abstract  = {Humanoid robots selectively emulate aspects of human form and behavior. Humanoids come in a variety of shapes and sizes, from complete human-size legged robots to isolated robotic heads with human-like sensing and expression. This chapter highlights significant humanoid platforms and achievements, and discusses some of the underlying goals behind this area of robotics. Humanoids tend to require the integration of many of the methods covered in detail within other chapters of this handbook, so this chapter focuses on distinctive aspects of humanoid robotics with liberal cross-referencing.},
+  isbn      = {978-3-540-30301-5},
+  doi       = {10.1007/978-3-540-30301-5_57},
+  url       = {https://doi.org/10.1007/978-3-540-30301-5_57}
 }
 
+%Book no. 2
+@book{RosenhahnBodo2008HMUM,
+  series    = {Computational Imaging and Vision, 36},
+  abstract  = {Edward Muybridge (1830–1904) is known as the pioneer in motion capt- ing with his famous experiments in 1887 called “Animal Locomotion”. Since then, the ?eld of animal or human motion analysis has grown in many dir- tions. However, research and results that involve human-like animation and the recovery of motion is still far from being satisfactory. The modelling, tracking, and understanding of human motion based on video sequences as a research ?eld has increased in importance particularly in thelastdecadewiththeemergenceofapplicationsinsportssciences,medicine, biomechanics, animation (online games), surveillance, and security. Progress in human motion analysis depends on empirically anchored and grounded research in computer vision, computer graphics, and biomechanics. Though these ?elds of research are often treated separately, human motion analysis requires the integration of methodologies from computer vision and computer graphics.Furthermore,theunderstandinganduseofbiomechanicsconstraints improves the robustness of such an approach. This book is based on a June 2006 workshop held in Dagstuhl, Germany. This workshop brought together for the ?rst time researchers from the afo- mentioned disciplines. Based on their diverse perspectives, these researchers havebeendevelopingnewmethodologiesandcontributing,throughtheir?- ings, to the domain of human motion analysis. The interdisciplinary character of the workshop allowed people to present a wide range of approaches that helped stimulate intellectual discussions and the exchange of new ideas.},
+  publisher = {Springer Netherlands : Imprint: Springer},
+  booktitle = {Human Motion Understanding, Modelling, Capture, and Animation},
+  isbn      = {1-281-11701-3},
+  year      = {2008},
+  title     = {Human Motion Understanding, Modelling, Capture, and Animation / edited by Bodo Rosenhahn, Reinhard Klette, Dimitris Metaxas.},
+  edition   = {1st ed. 2008.},
+  language  = {eng},
+  address   = {Dordrecht},
+  author    = {Rosenhahn, Bodo and Klette, Reinhard and Metaxas, Dimitris and Metaxas, Dimitris N.},
+  keywords  = {Computer vision; Human physiology; Sports medicine; Image Processing and Computer Vision; Computer Imaging, Vision, Pattern Recognition and Graphics; Human Physiology; Sports Medicine}
+}
+
+%Book no. 3
+@book{alma991010593879705596,
+  author    = {Muybridge Eadweard},
+  address   = {New York},
+  booktitle = {Muybridge's complete human and animal locomotion : all 787 plates from the 1887 animal locomotion / by Eadweard Muybridge ; introd. to the Dover ed. by Anita Ventura Mozley,...},
+  isbn      = {0-486-23792-3},
+  keywords  = {Muybridge Eadweard 1830-1904},
+  language  = {eng},
+  publisher = {Dover},
+  series    = {Collections of fine art in Dover books},
+  title     = {Muybridge's complete human and animal locomotion  : all 787 plates from the 1887 animal locomotion / by Eadweard Muybridge ; introd. to the Dover ed. by Anita Ventura Mozley,...}
+}
+
+%Book no. 4
+@inproceedings{evolution,
+  author = {Akhtaruzzaman, Md and Shafie, A.A.},
+  year   = {2010},
+  month  = {11},
+  pages  = {1021 - 1028},
+  title  = {Evolution of Humanoid Robot and contribution of various countries in advancing the research and development of the platform},
+  doi    = {10.1109/ICCAS.2010.5669646}
+}
+
+%Book no. 5
+@inproceedings{tanie,
+  author    = {K. {Tanie}},
+  booktitle = {Proceedings of IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems, MFI2003.},
+  title     = {Humanoid robot and its application possibility},
+  year      = {2003},
+  volume    = {},
+  number    = {},
+  pages     = {213-214},
+  doi       = {10.1109/MFI-2003.2003.1232659}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
