Updated Report - Acknowledgement

--- a/report/report.tex
+++ b/report/report.tex
@@ -32,23 +32,23 @@
  
  \newpage
  
- \section*{Acknowledgements}
+%  \section*{Acknowledgements}
  
- I would first like to thank my thesis advisor Dr Sophie Sakka for her motivation and opportunity for the thesis topic.
-  I would like forward my thanks to Prof. Olivier Kermorgant for his continuous motivation and help in informing 
-  students about thesis positions without which I would not have found the position. 
+%  I would first like to thank my thesis advisor Dr Sophie Sakka for her motivation and opportunity for the thesis topic.
+%   I would like forward my thanks to Prof. Olivier Kermorgant for his continuous motivation and help in informing 
+%   students about thesis positions without which I would not have found the position. 
 
-~
+% ~
 
-I would also like to thank Prof. Ina Taralova for her indispensable advice regarding the rules and practices involved 
-in the organisation of this report , which I have tried to implement to the best of my abilities.
+% I would also like to thank Prof. Ina Taralova for her indispensable advice regarding the rules and practices involved 
+% in the organisation of this report , which I have tried to implement to the best of my abilities.
 
-~
+% ~
 
-Finally, I must express my very profound gratitude to my parents and my friends for providing me with unfailing 
-support and continuous encouragement throughout my years of study and through the process of researching and writing 
-this report. This accomplishment would not have been possible without them.
- \newpage
+% Finally, I must express my very profound gratitude to my parents and my friends for providing me with unfailing 
+% support and continuous encouragement throughout my years of study and through the process of researching and writing 
+% this report. This accomplishment would not have been possible without them.
+%  \newpage
  
  
 \section*{Notations}
