Updated Report - Thesis Organization

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -41,7 +41,9 @@ However, there is a catch because the direct imitation of captured movements is 
 the degree of freedoms and the weight distributions between humans and humanoids. Depending on the complexity of the 
 motion, the challenge of motion generation increases due to various humanoid's constraints including the constraints in 
 stability and the extended period of imitation. 
-
+\section{Service Robotics}
+\section{Why Humanoid robots}
+\section{History of humanod robots}
 \section{Measuring Human Movement}
 
 Kinesiology is defined as the scientific study of human movement. To access human motion, Kinesiology involves principles
@@ -166,4 +168,4 @@ either marker-based or marker-less tracking systems. The main objective of the t
 motoin imitation and validate it experimentatlly using an affordable humanoiod robot. \textit{NAO} from \textit{Aldebaran
 Robotics}. The motion capture system used in this scenario is \textit{Xsens MVN} from manufacturer \textit{Xsens}.
 
-\section{Report Overview}
+\section{Thesis Organisation}
