--- a/report/report.tex
+++ b/report/report.tex
@@ -78,15 +78,8 @@ ZMP & Zero Moment Point \\
  
  \include{introduction.tex}
  \include{state_of_the_art.tex}
-
-
- 
- \chapter{Actual work}
-  
- 
-
- 
- \chapter{Experiments}
+  \include{dynamcis_based_imitation.tex}
+  \include{implementation.tex}
  
  
  \chapter*{Conclusion}
@@ -99,7 +92,6 @@ ZMP & Zero Moment Point \\
  % switch to A-B-C chaptering
  \appendix	
  
- \chapter{Proof of theorem}
  
  \addcontentsline{toc}{chapter}{Bibliography}
  
