--- a/report/state_of_the_art.tex
+++ b/report/state_of_the_art.tex
@@ -1,7 +1,20 @@
-\chapter{State of the art}
- 
-\section{Motion Imitation Problem}
+\chapter{State of the Art}
 
-\section{Simplified Humanoid Model}
 
-\section{Balance control}
+\section{Approaches in Humanoid Robot Control}
+\subsection{Motion Plannnig}
+\subsection{Kinematics Approach}
+\subsection{Dynamics Approach}
+\subsection{Optimal Control}
+
+\section{Approaches in Humanoid Balance Control}
+\subsection{Linear Inverse Pendulum Approach}
+\subsection{Double Inverse Pendulum Approach}
+\subsection{Cart Table Model}
+\subsection{Spherical Inverse Pendulum Approach}
+
+\section{Approaches in Posture Control and Motion Retargetting}
+\subsection{Mansard's work}
+\subsection{D. Gucci's work}
+\subsection{Kumar Munirathinam's work}
+
