--- a/report/thesisfront.tex
+++ b/report/thesisfront.tex
@@ -22,7 +22,7 @@
 \begin{center}
 	2020 / 2021\\
 	\lskip
-	Master Thesis Report % or bibliography report
+	Master Thesis - Midterm Report % or bibliography report
 	\lskip
 	
 	Presented by \lskip 
@@ -35,7 +35,7 @@
 	
 	\vfill
 
-Jury \lskip
+% Jury \lskip
 		
 	\end{center}
 	
@@ -43,9 +43,9 @@ Jury \lskip
 
 \begin{tabular}{p{3cm}p{5cm}p{7cm} }
  % President: & Name & Position (Institution) \\ & & \\     % for final defense only (not bibliography)
- Evaluators: & Dr. Olivier Kermognant & Assistant Professor (LS2N, ECN) \\
-	      & Name & Position (Institution) \\ 
-	      & Name & Position (Institution) \\ & & \\  & & \\ 
+%  Evaluators: & Dr. Olivier Kermognant & Assistant Professor (LS2N, ECN) \\
+% 	      & Name & Position (Institution) \\ 
+% 	      & Name & Position (Institution) \\ & & \\  & & \\ 
   Supervisor(s):  & Dr. Sophie Sakka & Assistant Professor (LS2N, ECN) \\
 % EMARO students only
 %(EMARO)  & Co-supervisor from M1 & Position, M1 institution 
