--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,6 +1,62 @@
 \chapter{Introduction}
 %  \addcontentsline{toc}{chapter}{Introduction}	 % non-numbered chapters do not appear in table of contents by default
 
+The interest of humans in building, controlling and researching complex machines that look and behave like humans is not 
+recent; it started very early in humanity. There has always been numerous models of human-like machines over the centuries 
+crafted by the engineers, mathematicians and craftsman that prove the existence of human-alike machines. After the development 
+of Unimate and Shakey, the robotics has been widely boosted. Indeed, the first Industrial revolution of robotics only considered 
+arm manipulators and wheeled platforms in a structured and defined environments. The interest towards human-like robots or humaniod 
+robots has always grown instead of being only in science fiction. The recent researches and development has proved the possiblity
+of building humanoid robots or simply humanoids, becoming reality, although not powerful or autonmony as desired. 
+
+~
+
+In order to develop more autonomous interactions in humanoid robots, one of the major and main objective is that it should
+be able to imitate human motions precisely. This would be a major milestone to be achieved in the field of humanoid robots.
+Scientists and researchers, over the past decades are thriving to make the humanoid robot movements as close as human 
+motions. Recently, the ability of the humanoid robots to teleoperate increases rapidly. To imitate the motion perfectly,
+the robot should be able to understand the motion; hence, the importance of motion capture systems has widely increased
+in robotics especially in humanoid robots.
+
+~
+
+Nowadays, a variety of technologies exist that allow for high accurate capturing of human motions with high frequency. 
+By imitating captured motion, humanoid robots can be teleoperated and also learn new skills resembling human actions. 
+However, there is a catch because the direct imitation of captured movements is impossible due to the differences in 
+the degree of freedoms and the weight distributions between humans and humanoids. Depending on the complexity of the 
+motion, the challenge of motion generation increases due to various humanoid's constraints including the constraints in 
+stability and the extended period of imitation. This chapter presents the brief introduction on the humanoid robots, 
+their development and behaviour towards human-like motions.
+
+
+\section{Service Robotics}
+
+According to \textit{International Federation of Robotics (IFR)}, a service robot is defined as a machine that performs useful
+tasks for humans or equipment excluding industrial automation applications. These robots are mainly dedicated to accompany humans
+with possibly reduced capablities and to assis them in dull, dangerous or repetitive tasks. Moreover, \textit{IFR} divides the 
+service robots into two possible categories.
+
+\begin{itemize}
+    \item \textit{Personal Service Robots -} These robots are used for non-commercial and social tasks. The robots are usually trained 
+    to operate with non-trained socialogist rather engineers or roboticists.
+    \item \textit{Professional Service Robots -} These robots are used for a commericial task and are usually operate with well-trained
+    operators. The robots tend to work in a professional or well-defined environments are built based on the stack of specialized tasks.
+
+\end{itemize}
+
+The service robots that are mentioned previously tend to be application-depending and are able to designed to satisfy the specific needs. 
+One of the main aim of the service robots is to co-exist with humans alongside and to help them with any tasks that humans may need assist.
+However, typical human environments are completely different to the environments that robots experience currently. The robot environments are 
+well-defined with a set of deterministic or stochastic variables that allows the robots for better estimations. Though the robots are able to 
+estimate the environment to an extent, it's abilities are nowhere near for human capablity. Another important problem is to build a robot 
+that can perform multiple tasks and hold multiple applications. Hence, for a robot to exist among humans and to interact naturally with people, 
+one robot must overcome all these difficulties to some degree of autonomy. Therefore, one of the major challenges in service robotis it to build a 
+general robot that can succeed in all the areas where human beings can. Equvalently, there is a challenge to build robots that also act and behave
+as humans.
+
+
+\section{Humanoid robots}
+
 Humanoid robots are expected to exist and work in a close relationship with human beings in the everyday world and 
 to serve the needs of physically handicapped people. These robots must be able to cope with the wide variety of tasks
 and objects encountered in dynamic unstructured environments. Imagining an humanoid robot collaborates with humans 
@@ -26,24 +82,41 @@ suitable mechanical structures with constraints in shape, size and weight to imp
 
 ~
 
-In order to develop more autonomous interactions in humanoid robots, one of the major and main objective is that it should
-be able to imitate human motions precisely. This would be a major milestone to be achieved in the field of humanoid robots.
-Scientists and researchers, over the past decades are thriving to make the humanoid robot movements as close as human 
-motions. Recently, the ability of the humanoid robots to teleoperate increases rapidly. To imitate the motion perfectly,
-the robot should be able to understand the motion; hence, the importance of motion capture systems has widely increased
-in robotics especially in humanoid robots.
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=1.0]{images/intro-3.png}\hfill
+    \caption[Humanoid robots over decades]{Some Bipedal Android robots over decades \cite{evolution} 
+        (a) First humanoid robot by Leanardo Da vinci (b) Steam Mam in 1865 (c) Electric man in 1885 (d) 
+        ELEKTRO in 1938 (e) BIPER - 4 in 1984 (f) Tron-XM in 1997 (g) H6 Humanoid robot in 2000 (h) Robot 
+        JACK in 2000 (i)  GuRoo in 2002 (j) QRIO, Sony in 2003 (k) Partnar Robot, Toyoto in 2004 (l) TwentyOne
+        in 2007 (m) REEM-A in 2007 (n) REEM-B in 2008 (o) NAO in 2008.}\hfill
+    \label{humanoid-robots}
+\end{figure}
+
+The idea of building machines which look and move like humans has been explored by philosophers and mathematicians
+since antiquity. Nowadays, the concepts of such machines are a part of research in robotics. Humanoid robots can 
+be thought of as mechanical, actuated devices that can perform human-like manipulation, including locomotion as 
+their main skill for displacement. Well before the first modern humanoid robot, one of the biggest steps towards 
+this objective was achieved in 1956 with the first commercial robot manipulator, \textit{Unimate, from Unimation}. 
+The automotive industry was the first to benefit from these kinds of manipulator robots. Recently, the development 
+of humanoid robots for education, research and services has proved the work in multiple ways. 
 
 ~
 
-Nowadays, a variety of technologies exist that allow for high accurate capturing of human motions with high frequency. 
-By imitating captured motion, humanoid robots can be teleoperated and also learn new skills resembling human actions. 
-However, there is a catch because the direct imitation of captured movements is impossible due to the differences in 
-the degree of freedoms and the weight distributions between humans and humanoids. Depending on the complexity of the 
-motion, the challenge of motion generation increases due to various humanoid's constraints including the constraints in 
-stability and the extended period of imitation. 
-\section{Service Robotics}
-\section{Why Humanoid robots}
-\section{History of humanod robots}
+Current goals of research in humanoid robots include industrial and social applications in day-to-day life. 
+A study was conducted by Tanie, \cite{tanie} and is briefed below
+
+\begin{itemize}
+\item maintenance tasks of industrial plants,
+\item security service for home and offices,
+\item human care, teleoperation of construction machines.
+\item cooperative work
+\end{itemize}
+
+Since many studies have explored this aspect of robot motion and how to make robots more \textit{human-like} and 
+\textit{human-aware}. Human Robot Interaction (HRI) is now a challenging research field and studies on the efficacy 
+of humanoid robots in human environments are further proceeded.
+
 \section{Measuring Human Movement}
 
 Kinesiology is defined as the scientific study of human movement. To access human motion, Kinesiology involves principles
@@ -54,6 +127,8 @@ devices were built to produce the moving pictures, among those exists the most a
 \textit{chronophotography}. This device allowed to study fast paced human motions by recording and reproducing the 
 captured motion \cite{RosenhahnBodo2008HMUM}. Another major contribution in motion study is the study on the path of 
 center of mass during human displacement \cite{alma991010593879705596}.
+
+~
 
 \begin{figure}[h!]
 \centering
@@ -71,44 +146,10 @@ with the advent of new technologies like electronics and magnetic devices, up un
 based on reflective markers, magnetic or inertial devices. Recently, there has been a huge development in the motion 
 capture systems which evolved the motion study to newer dimensions (discussed in the later chapter).
 
-\section{Humanoid robots}
-
-The idea of building machines which look and move like humans has been explored by philosophers and mathematicians
-since antiquity. Nowadays, the concepts of such machines are a part of research in robotics. Humanoid robots can 
-be thought of as mechanical, actuated devices that can perform human-like manipulation, including locomotion as 
-their main skill for displacement. Well before the first modern humanoid robot, one of the biggest steps towards 
-this objective was achieved in 1956 with the first commercial robot manipulator, \textit{Unimate, from Unimation}. 
-The automotive industry was the first to benefit from these kinds of manipulator robots. Recently, the development 
-of humanoid robots for education, research and services has proved the work in multiple ways. 
-
-\begin{figure}[h!]
-\centering
-\includegraphics[scale=0.6]{images/intro-3.png}\hfill
-\caption[Humanoid robots over decades]{Some Bipedal Android robots over decades \cite{evolution} 
-    (a) First humanoid robot by Leanardo Da vinci (b) Steam Mam in 1865 (c) Electric man in 1885 (d) 
-    ELEKTRO in 1938 (e) BIPER - 4 in 1984 (f) Tron-XM in 1997 (g) H6 Humanoid robot in 2000 (h) Robot 
-    JACK in 2000 (i)  GuRoo in 2002 (j) QRIO, Sony in 2003 (k) Partnar Robot, Toyoto in 2004 (l) TwentyOne
-    in 2007 (m) REEM-A in 2007 (n) REEM-B in 2008 (o) NAO in 2008.}\hfill
-\label{humanoid-robots}
-\end{figure}
 
 
-Current goals of research in humanoid robots include industrial and social applications in day-to-day life. 
-A study was conducted by Tanie, \cite{tanie} and is briefed below
 
-\begin{itemize}
-\item maintenance tasks of industrial plants,
-\item security service for home and offices,
-\item human care, teleoperation of construction machines.
-\item cooperative work
-\end{itemize}
-
-Since many studies have explored this aspect of robot motion and how to make robots more \textit{human-like} and 
-\textit{human-aware}. Human Robot Interaction (HRI) is now a challenging research field and studies on the efficacy 
-of humanoid robots in human environments are further proceeded.
-
-
-\section{Motion Imitation}
+\section{Challenges in Motion Imitation}
 
 Given the resemblance between humanoid robots and human beings, it is natural to look for inspiration in human movements
 in order to generate motion for the humanoid. The most straightforward way is to have the robot observe what the human 
@@ -120,7 +161,7 @@ skills by imitation and learning.
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.5]{images/motion-imitation.png}\hfill
+\includegraphics[scale=0.9]{images/motion-imitation.png}\hfill
 \caption[A motion imitation performance by HRP-2 humanoid robot]{A performance  based on motion imitation done by 
 HRP-2 humanoid robot}\hfill
 \label{marker-based-system}
@@ -132,7 +173,7 @@ human communication is non-verbal. Programming each aspect of the motion detail 
 is time-consuming and not fit to handle the immense variety and complexity of human behaviours. Thus, imitation comes
 as a more natural and intuitive alternative to classical methods, since more information can be transmitted directly.
 
-\subsection*{Challenges in Imitation}
+~
 
 Human motion cannot be directly transferred to the robot without choosing beforehand which affects the ocean or what
 is transferring. The most advanced human robots cannot move completely like a human being. The robots are limited 
@@ -160,12 +201,13 @@ real-time imitation processed be higher reactivity compensating the unpredictabl
 
 In humans, imitation is an advanced behavior whereby an individual observes and replicates the action of another 
 human arguably with more accuracy and precision. However in humanoid robots, these kind of motion imitations are possible
-up to kinematic level thorugh perception; the robot can be able to imitate the action posture using its predefined 
-configurations and controllers. But to imitate the action at dynamic level, humanoid robots are still struggling to 
+up to kinematic level thorugh perception; the robot can also be able to imitate the action posture dynamically using its predefined 
+configurations and controllers to an extent. But for a complete imitation at dynamic level, humanoid robots are still struggling to 
 approximately copy the dynamic parameters applied during the action. Presently, to copy the action at dynamic level, 
 feedback data from human during motion or action is mandatory. The motion data from human action is transferred using 
-either marker-based or marker-less tracking systems. The main objective of the thesis is to define realtime dynamics 
-motoin imitation and validate it experimentatlly using an affordable humanoiod robot. \textit{NAO} from \textit{Aldebaran
-Robotics}. The motion capture system used in this scenario is \textit{Xsens MVN} from manufacturer \textit{Xsens}.
+\textit{Xsens MVN Analyze}. The main objective of the thesis is to define realtime dynamic balance constraint during
+motion imitation and validate it experimentatlly using an affordable humanoid robot, \textit{NAO} from \textit{Aldebaran
+Robotics}. The balancing constraint of the robot is controlled using an Hierrachical Quadratic Programming (HQP) and validated on both 
+simulation and real robot.
 
 \section{Thesis Organisation}
