Updated Report - State of the Art

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -88,4 +88,56 @@ and Khatib, Oussama},
   pages     = {213-214},
   doi       = {10.1109/MFI-2003.2003.1232659}
 }
+
+@inproceedings{Vijayakumar,
+  author    = {Yang, Yiming and Ivan, Vladimir and Merkt, Wolfgang and Vijayakumar, Sethu},
+  booktitle = {2016 IEEE International Conference on Robotics and Biomimetics (ROBIO)},
+  title     = {Scaling sampling-based motion planning to humanoid robots},
+  year      = {2016},
+  volume    = {},
+  number    = {},
+  pages     = {1448-1454},
+  doi       = {10.1109/ROBIO.2016.7866531}
+}
+
+@inproceedings{LaValle2006PlanningA,
+  title  = {Planning algorithms},
+  author = {S. LaValle},
+  year   = {2006}
+}
+
+@article{Latombe,
+  author   = {Jérôme Barraquand and Jean-Claude Latombe},
+  title    = {Robot Motion Planning: A Distributed Representation Approach},
+  journal  = {The International Journal of Robotics Research},
+  volume   = {10},
+  number   = {6},
+  pages    = {628-649},
+  year     = {1991},
+  doi      = {10.1177/027836499101000604},
+  url      = { 
+        https://doi.org/10.1177/027836499101000604
+    
+},
+  eprint   = { 
+        https://doi.org/10.1177/027836499101000604
+    
+},
+  abstract = { We propose a new approach to robot path planning that consists of building and searching a graph connecting the local minima of a potential function defined over the robot's configuration space. A planner based on this approach has been implemented. This planner is consider ably faster than previous path planners and solves prob lems for robots with many more degrees of freedom (DOFs). The power of the planner derives both from the "good" properties of the potential function and from the efficiency of the techniques used to escape the local min ima of this function. The most powerful of these tech niques is a Monte Carlo technique that escapes local min ima by executing Brownian motions. The overall approach is made possible by the systematic use of distributed rep resentations (bitmaps) for the robot's work space and configuration space. We have experimented with the plan ner using several computer-simulated robots, including rigid objects with 3 DOFs (in 2D work space) and 6 DOFs (in 3D work space) and manipulator arms with 8, 10, and 31 DOFs (in 2D and 3D work spaces). Some of the most significant experiments are reported in this article. }
+}
+
+@phdthesis{ramosponce,
+  title               = {{Generation of the whole-body motion for humanoid robots with the complete dynamics}},
+  author              = {Ramos Ponce, Oscar Efrain},
+  url                 = {https://tel.archives-ouvertes.fr/tel-01134313},
+  hal_local_reference = {Rapport laas : 14690},
+  school              = {{Universite Toulouse III Paul Sabatier}},
+  year                = {2014},
+  month               = Oct,
+  keywords            = {Dynamic walking ; Motion imitation ; Task space ; Inverse dynamics ; Whole-body motion ; humanoid robotics},
+  type                = {Theses},
+  pdf                 = {https://tel.archives-ouvertes.fr/tel-01134313/file/RAMOS%20PONCE.pdf},
+  hal_id              = {tel-01134313},
+  hal_version         = {v1}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
