--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -7,7 +7,7 @@ crafted by the engineers, mathematicians and craftsman that prove the existence 
 of Unimate and Shakey, the robotics has been widely boosted. Indeed, the first Industrial revolution of robotics only considered 
 arm manipulators and wheeled platforms in a structured and defined environments. The interest towards human-like robots or humaniod 
 robots has always grown instead of being only in science fiction. The recent researches and development has proved the possiblity
-of building humanoid robots or simply humanoids, becoming reality, although not powerful or autonmony as desired. 
+of building humanoid robots or simply humanoids, becoming reality, although not powerful or autonomy as desired. 
 
 ~
 
@@ -33,13 +33,13 @@ their development and behaviour towards human-like motions.
 
 According to \textit{International Federation of Robotics (IFR)}, a service robot is defined as a machine that performs useful
 tasks for humans or equipment excluding industrial automation applications. These robots are mainly dedicated to accompany humans
-with possibly reduced capablities and to assis them in dull, dangerous or repetitive tasks. Moreover, \textit{IFR} divides the 
+with possibly reduced capabilities and to assist them in dull, dangerous or repetitive tasks. Moreover, \textit{IFR} divides the 
 service robots into two possible categories.
 
 \begin{itemize}
     \item \textit{Personal Service Robots -} These robots are used for non-commercial and social tasks. The robots are usually trained 
-    to operate with non-trained socialogist rather engineers or roboticists.
-    \item \textit{Professional Service Robots -} These robots are used for a commericial task and are usually operate with well-trained
+    to operate with non-trained sociologist rather engineers or roboticists.
+    \item \textit{Professional Service Robots -} These robots are used for a commercial task and are usually operate with well-trained
     operators. The robots tend to work in a professional or well-defined environments are built based on the stack of specialized tasks.
 
 \end{itemize}
@@ -48,10 +48,10 @@ The service robots that are mentioned previously tend to be application-dependin
 One of the main aim of the service robots is to co-exist with humans alongside and to help them with any tasks that humans may need assist.
 However, typical human environments are completely different to the environments that robots experience currently. The robot environments are 
 well-defined with a set of deterministic or stochastic variables that allows the robots for better estimations. Though the robots are able to 
-estimate the environment to an extent, it's abilities are nowhere near for human capablity. Another important problem is to build a robot 
+estimate the environment to an extent, it's abilities are nowhere near for human capabilities. Another important problem is to build a robot 
 that can perform multiple tasks and hold multiple applications. Hence, for a robot to exist among humans and to interact naturally with people, 
 one robot must overcome all these difficulties to some degree of autonomy. Therefore, one of the major challenges in service robotis it to build a 
-general robot that can succeed in all the areas where human beings can. Equvalently, there is a challenge to build robots that also act and behave
+general robot that can succeed in all the areas where human beings can. Equivalently, there is a challenge to build robots that also act and behave
 as humans.
 
 
@@ -201,13 +201,13 @@ real-time imitation processed be higher reactivity compensating the unpredictabl
 
 In humans, imitation is an advanced behavior whereby an individual observes and replicates the action of another 
 human arguably with more accuracy and precision. However in humanoid robots, these kind of motion imitations are possible
-up to kinematic level thorugh perception; the robot can also be able to imitate the action posture dynamically using its predefined 
+up to kinematic level through perception; the robot can also be able to imitate the action posture dynamically using its predefined 
 configurations and controllers to an extent. But for a complete imitation at dynamic level, humanoid robots are still struggling to 
 approximately copy the dynamic parameters applied during the action. Presently, to copy the action at dynamic level, 
 feedback data from human during motion or action is mandatory. The motion data from human action is transferred using 
 \textit{Xsens MVN Analyze}. The main objective of the thesis is to define realtime dynamic balance constraint during
-motion imitation and validate it experimentatlly using an affordable humanoid robot, \textit{NAO} from \textit{Aldebaran
-Robotics}. The balancing constraint of the robot is controlled using an Hierrachical Quadratic Programming (HQP) and validated on both 
+motion imitation and validate it experimentally using an affordable humanoid robot, \textit{NAO} from \textit{Aldebaran
+Robotics}. The balancing constraint of the robot is controlled using an Hierachical Quadratic Programming (HQP) and validated on both 
 simulation and real robot.
 
 \section{Thesis Organisation}
